# krglhwebp

./: .gitignore  CMakeLists.txt  dllmain.cpp
.github/workflows/: ci-krkrsdl2.yml
src_list/: includes.txt  sources.txt
